--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "porm",
-  "version": "1.1.1",
+  "version": "1.1.5",
   "description": "Postgres ORM",
   "repository": "https://gitlab.com/romikus/porm",
   "author": "Roman Kushyn",
@@ -14,16 +14,23 @@
     "model",
     "sql"
   ],
-  "main": "src/index",
+  "main": "dist/index.js",
+  "files": [
+    "dist"
+  ],
   "license": "MIT",
+  "scripts": {
+    "start": "tsc --watch",
+    "build": "tsc"
+  },
   "dependencies": {
     "@types/pluralize": "latest",
-    "pg-adapter": "^1.1.43",
-    "pluralize": "latest",
-    "typescript": "^3.8.3"
+    "pg-adapter": "^1.1.54",
+    "pluralize": "latest"
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
-    "jest": "latest"
+    "jest": "latest",
+    "typescript": "^4.0.3"
   }
 }
