--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "porm",
-  "version": "1.1.7",
+  "version": "1.1.8",
   "description": "Postgres ORM",
   "repository": "https://github.com/romeerez/porm",
   "author": "Roman Kushyn",
@@ -22,12 +22,21 @@
   "scripts": {
     "start": "tsc --watch",
     "build": "tsc",
-    "prepublish": "tsc"
+    "prepublish": "tsc",
+    "lint": "eslint --fix src",
+    "test": "jest test"
   },
   "dependencies": {
     "@types/pluralize": "latest",
-    "pg-adapter": "^1.1.55",
-    "pluralize": "latest"
+    "@typescript-eslint/eslint-plugin": "^4.9.0",
+    "@typescript-eslint/parser": "^4.9.0",
+    "eslint": "^7.14.0",
+    "eslint-config-prettier": "^6.15.0",
+    "eslint-plugin-prettier": "^3.1.4",
+    "pg-adapter": "^1.1.58",
+    "pluralize": "latest",
+    "prettier": "^2.2.1",
+    "ts-jest": "^26.4.4"
   },
   "devDependencies": {
     "@types/jest": "^26.0.0",
